--- a/src/card_list_styles/gridStyle.css
+++ b/src/card_list_styles/gridStyle.css
@@ -1,8 +1,12 @@
 .grid_cards{
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+}
+
+.cards{
     border-radius: 2px;
-    border-color: aquamarine;
     border-color: black;
 }
+
