--- a/src/card_list_styles/card.style.css
+++ b/src/card_list_styles/card.style.css
@@ -1,7 +1,7 @@
 .card-container {
     display: flex;
     flex-direction: column;
-    background-color: cadetblue;
+    background-color: rgba(0, 230, 118, 0.5);
     border: 1px solid grey;
     border-radius: 5px;
     padding: 25px;
