--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,22 @@
+
 .App {
   text-align: center;
 }
 
 .App_background{
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
   background: url('./desert-landscape-desktop.png') no-repeat center center fixed;
   background-size: cover;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+  overflow-y:scroll;
+  overflow-x:hidden;
 }
 
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
+::-webkit-scrollbar { 
+  display: none;  /* Chrome Safari */
+}
 
 .Form_input{
   display: block;
@@ -29,4 +27,10 @@
 .Form_button{
   display: block;
   margin: auto;
+}
+
+.indie {
+  font-family: 'Indie Flower', cursive;
+  font-size: 30px;
+  color: rgba(0, 230, 118, 0.5) ;
 }
